--- a/src/css/sass/modules/sprite.scss
+++ b/src/css/sass/modules/sprite.scss
@@ -144,38 +144,60 @@ $menu5-total-height: 319px;
 $menu5-image: 'sprite.png';
 $menu5: (1077px, 63px, -1077px, -63px, 31px, 31px, 1211px, 319px, 'sprite.png', 'menu5', );
 $menu-azul1-name: 'menuAzul1';
-$menu-azul1-x: 1088px;
+$menu-azul1-x: 1132px;
 $menu-azul1-y: 94px;
-$menu-azul1-offset-x: -1088px;
+$menu-azul1-offset-x: -1132px;
 $menu-azul1-offset-y: -94px;
 $menu-azul1-width: 21px;
 $menu-azul1-height: 21px;
 $menu-azul1-total-width: 1211px;
 $menu-azul1-total-height: 319px;
 $menu-azul1-image: 'sprite.png';
-$menu-azul1: (1088px, 94px, -1088px, -94px, 21px, 21px, 1211px, 319px, 'sprite.png', 'menuAzul1', );
+$menu-azul1: (1132px, 94px, -1132px, -94px, 21px, 21px, 1211px, 319px, 'sprite.png', 'menuAzul1', );
 $menu-azul2-name: 'menuAzul2';
-$menu-azul2-x: 1067px;
+$menu-azul2-x: 1068px;
 $menu-azul2-y: 94px;
-$menu-azul2-offset-x: -1067px;
+$menu-azul2-offset-x: -1068px;
 $menu-azul2-offset-y: -94px;
-$menu-azul2-width: 21px;
-$menu-azul2-height: 21px;
+$menu-azul2-width: 22px;
+$menu-azul2-height: 22px;
 $menu-azul2-total-width: 1211px;
 $menu-azul2-total-height: 319px;
 $menu-azul2-image: 'sprite.png';
-$menu-azul2: (1067px, 94px, -1067px, -94px, 21px, 21px, 1211px, 319px, 'sprite.png', 'menuAzul2', );
+$menu-azul2: (1068px, 94px, -1068px, -94px, 22px, 22px, 1211px, 319px, 'sprite.png', 'menuAzul2', );
 $menu-azul3-name: 'menuAzul3';
 $menu-azul3-x: 1046px;
 $menu-azul3-y: 94px;
 $menu-azul3-offset-x: -1046px;
 $menu-azul3-offset-y: -94px;
-$menu-azul3-width: 21px;
-$menu-azul3-height: 21px;
+$menu-azul3-width: 22px;
+$menu-azul3-height: 22px;
 $menu-azul3-total-width: 1211px;
 $menu-azul3-total-height: 319px;
 $menu-azul3-image: 'sprite.png';
-$menu-azul3: (1046px, 94px, -1046px, -94px, 21px, 21px, 1211px, 319px, 'sprite.png', 'menuAzul3', );
+$menu-azul3: (1046px, 94px, -1046px, -94px, 22px, 22px, 1211px, 319px, 'sprite.png', 'menuAzul3', );
+$menu-azul4-name: 'menuAzul4';
+$menu-azul4-x: 1090px;
+$menu-azul4-y: 94px;
+$menu-azul4-offset-x: -1090px;
+$menu-azul4-offset-y: -94px;
+$menu-azul4-width: 21px;
+$menu-azul4-height: 21px;
+$menu-azul4-total-width: 1211px;
+$menu-azul4-total-height: 319px;
+$menu-azul4-image: 'sprite.png';
+$menu-azul4: (1090px, 94px, -1090px, -94px, 21px, 21px, 1211px, 319px, 'sprite.png', 'menuAzul4', );
+$menu-azul5-name: 'menuAzul5';
+$menu-azul5-x: 1111px;
+$menu-azul5-y: 94px;
+$menu-azul5-offset-x: -1111px;
+$menu-azul5-offset-y: -94px;
+$menu-azul5-width: 21px;
+$menu-azul5-height: 21px;
+$menu-azul5-total-width: 1211px;
+$menu-azul5-total-height: 319px;
+$menu-azul5-image: 'sprite.png';
+$menu-azul5: (1111px, 94px, -1111px, -94px, 21px, 21px, 1211px, 319px, 'sprite.png', 'menuAzul5', );
 $pessoas-topo-name: 'pessoasTopo';
 $pessoas-topo-x: 231px;
 $pessoas-topo-y: 0px;
@@ -210,16 +232,16 @@ $sobe-total-height: 319px;
 $sobe-image: 'sprite.png';
 $sobe: (1012px, 143px, -1012px, -143px, 177px, 26px, 1211px, 319px, 'sprite.png', 'sobe', );
 $vai-name: 'vai';
-$vai-x: 1109px;
+$vai-x: 1153px;
 $vai-y: 94px;
-$vai-offset-x: -1109px;
+$vai-offset-x: -1153px;
 $vai-offset-y: -94px;
 $vai-width: 25px;
 $vai-height: 12px;
 $vai-total-width: 1211px;
 $vai-total-height: 319px;
 $vai-image: 'sprite.png';
-$vai: (1109px, 94px, -1109px, -94px, 25px, 12px, 1211px, 319px, 'sprite.png', 'vai', );
+$vai: (1153px, 94px, -1153px, -94px, 25px, 12px, 1211px, 319px, 'sprite.png', 'vai', );
 $ver-mais-name: 'verMais';
 $ver-mais-x: 590px;
 $ver-mais-y: 143px;
@@ -232,20 +254,20 @@ $ver-mais-total-height: 319px;
 $ver-mais-image: 'sprite.png';
 $ver-mais: (590px, 143px, -590px, -143px, 245px, 54px, 1211px, 319px, 'sprite.png', 'verMais', );
 $volta-name: 'volta';
-$volta-x: 1134px;
+$volta-x: 1178px;
 $volta-y: 94px;
-$volta-offset-x: -1134px;
+$volta-offset-x: -1178px;
 $volta-offset-y: -94px;
 $volta-width: 25px;
 $volta-height: 12px;
 $volta-total-width: 1211px;
 $volta-total-height: 319px;
 $volta-image: 'sprite.png';
-$volta: (1134px, 94px, -1134px, -94px, 25px, 12px, 1211px, 319px, 'sprite.png', 'volta', );
+$volta: (1178px, 94px, -1178px, -94px, 25px, 12px, 1211px, 319px, 'sprite.png', 'volta', );
 $spritesheet-width: 1211px;
 $spritesheet-height: 319px;
 $spritesheet-image: 'sprite.png';
-$spritesheet-sprites: ($botao-topo, $box-preto, $desce, $flamula, $great-place, $imagem-quem-somos, $item-lateral, $menu1, $menu2, $menu3, $menu4, $menu5, $menu-azul1, $menu-azul2, $menu-azul3, $pessoas-topo, $setinha-direita, $sobe, $vai, $ver-mais, $volta, );
+$spritesheet-sprites: ($botao-topo, $box-preto, $desce, $flamula, $great-place, $imagem-quem-somos, $item-lateral, $menu1, $menu2, $menu3, $menu4, $menu5, $menu-azul1, $menu-azul2, $menu-azul3, $menu-azul4, $menu-azul5, $pessoas-topo, $setinha-direita, $sobe, $vai, $ver-mais, $volta, );
 $spritesheet: (1211px, 319px, 'sprite.png', $spritesheet-sprites, );
 
 /*
