--- a/src/css/sass/partials/home.scss
+++ b/src/css/sass/partials/home.scss
@@ -63,7 +63,8 @@
 
 		@include susy-media (max-width 960px) {
 			@include span(1 of 1 0);
-			margin-bottom: 10px;
+			margin-bottom: 20px;
+      height: auto;
 		}
 
 		.cadaNoticiaMenor {
@@ -71,11 +72,25 @@
 			display: table-row;
 			vertical-align: middle;
 			height: 136px;
+      border-top: 1px solid $azul;
+
+      @include susy-media (max-width 960px) {
+        height: auto;
+        display: block;
+        margin: 0;
+        padding: 10px 0;
+      }
 
 			a {
 				display: table-cell;
 				vertical-align: middle;
 				height: 136px;
+
+        @include susy-media (max-width 960px) {
+          height: auto;
+          display: block;
+          font-size: 2.5rem;
+        }
 			}
 
 			&:first-child {
@@ -162,6 +177,11 @@
 		display: block;
 		overflow: hidden;
 		margin-bottom: 5px;
+
+    img {
+      display: block;
+      margin: auto;
+    }
 	}
 
 	.contatoMeuPrecon {
