--- a/src/css/sass/partials/footer.scss
+++ b/src/css/sass/partials/footer.scss
@@ -19,82 +19,72 @@
 		padding: 15px 0;
 		@include span(1 of 1 0);
 
-    // @include susy-media (max-width 960px) {
-    //   .wrapper {
-    //     @include container(1);
+    .footerMenu {
+      display: block;
+      float: left;
+      max-width: 20%;
 
-    //     .footerMenu {
-    //       width: 100%;
-    //       clear: both;
-    //     }
-    //   }
-    // }
+      list-style: none;
+      padding: 0 15px;
 
-		.footerMenu {
-			display: block;
-			float: left;
-			max-width: 15%;
+      border-right: solid 1px #fff;
+      padding-right: 20px;
+      height: 140px;
 
-			list-style: none;
-			padding: 0 15px;
-
-			border-right: solid 1px #fff;
-			padding-right: 20px;
-			height: 140px;
-
-      @include susy-media (max-width 960px) {
-        width: 100%;
-        clear: both;
-        margin: 0;
-        padding: 20px 0;
-        max-width: 100%;
-        height: auto;
+      &:last-child {
+        border-right: none;
       }
 
-			&:nth-child(3), &:nth-child(4) {
-				//max-width: 180px;
-			}
+      @include susy-media (max-width 960px) {
+        @include span(12);
+        height: initial;
+        border: none;
+        border-bottom: solid 1px #fff;
+        padding-bottom: 20px;
+      }
 
-			@include susy-media (max-width 960px) {
-				@include span(1 of 1);
-				border: none;
-				border-bottom: solid 1px #fff;
-			}
+      ul {
+        list-style: none;
+        padding: 0;
+      }
 
-			h4 {
-				margin: 0;
-				font-weight: 500;
-				text-transform: uppercase;
-				font-size: 1.6rem;
-			}
+      h4 {
+        margin: 0;
+        font-weight: 300;
+        text-transform: uppercase;
+        font-size: 1.4rem;
+        text-align: left;
+      }
 
-			a {
-				color: #fff;
-			}
+      a {
+        color: #fff;
+      }
 
-			li {
-				a {
-					display: inline-block;
-					margin: 7px 0;
-					color: #fff;
-					font-size: 1.4rem;
-					line-height: 1;
-				}
-			}
-		}
+      li {
+        a {
+          display: inline-block;
+          margin: 4px 0;
+          color: #fff;
+          font-weight: 100;
+          font-size: 1.2rem;
+          line-height: 1;
+        }
+      }
+    }
 
-		#menuDownloads {
-			border-right: none;
-		}
+    #menuObras {
+    }
 
-		#menuInstitucional {
+    #menuInstitucional {
 
-			@include susy-media (max-width 960px) {
-				border-right: none;
-				padding-right: 0;
-				padding-bottom: 30px;
-			}
-		}
+      @include susy-media (max-width 960px) {
+        border-right: none;
+        padding-right: 0;
+        padding-bottom: 30px;
+
+        border-bottom: solid 1px #fff;
+      }
+    }
 
 		.telefone {
 			@include span(last 3);
