--- a/src/style.css
+++ b/src/style.css
@@ -1068,57 +1068,56 @@ aside.sideNoticias #sidebarNoticias .maisNoticias li hr {
 .footer .azul .footerMenu {
   display: block;
   float: left;
-  max-width: 15%;
+  max-width: 20%;
   list-style: none;
   padding: 0 15px;
   border-right: solid 1px #fff;
   padding-right: 20px;
   height: 140px;
 }
-@media (max-width: 960px) {
-  .footer .azul .footerMenu {
-    width: 100%;
-    clear: both;
-    margin: 0;
-    padding: 20px 0;
-    max-width: 100%;
-    height: auto;
-  }
+.footer .azul .footerMenu:last-child {
+  border-right: none;
 }
 @media (max-width: 960px) {
   .footer .azul .footerMenu {
-    width: 80%;
+    width: 98.3333333333%;
     float: left;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 0.8333333333%;
+    margin-right: 0.8333333333%;
+    height: initial;
     border: none;
     border-bottom: solid 1px #fff;
+    padding-bottom: 20px;
   }
+}
+.footer .azul .footerMenu ul {
+  list-style: none;
+  padding: 0;
 }
 .footer .azul .footerMenu h4 {
   margin: 0;
-  font-weight: 500;
+  font-weight: 300;
   text-transform: uppercase;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
+  text-align: left;
 }
 .footer .azul .footerMenu a {
   color: #fff;
 }
 .footer .azul .footerMenu li a {
   display: inline-block;
-  margin: 7px 0;
+  margin: 4px 0;
   color: #fff;
-  font-size: 1.4rem;
+  font-weight: 100;
+  font-size: 1.2rem;
   line-height: 1;
-}
-.footer .azul #menuDownloads {
-  border-right: none;
 }
 @media (max-width: 960px) {
   .footer .azul #menuInstitucional {
     border-right: none;
     padding-right: 0;
     padding-bottom: 30px;
+    border-bottom: solid 1px #fff;
   }
 }
 .footer .azul .telefone {
